# rsked

./: .gitignore  README.md  meson.build  meson_options.txt  pack_rsked.sh  setup.sh
.github/workflows/: codeql-analysis.yml
config/: .gitignore
config/example-armv7l/gqrx/: gold.conf
config/example-armv7l/mpd/: mpd.conf
config/example-armv7l/mpd/playlists/: master.m3u
config/example-armv7l/rsked/: cooling.json  crontab  deploy_check.pl  example-ci.conf  example-cooling.json  example-rsked.json  rsked.json  schedule.json
config/example-x86_64/: crontab
config/example-x86_64/gqrx/: gold.conf
config/example-x86_64/mpd/: mpd.conf
config/example-x86_64/mpd/playlists/: example-master.m3u
config/example-x86_64/rsked/: ci.conf  cooling.json  crontab  example-rsked.json  rsked.json  schedule.json
cooling/: cooling.cc  cooling.hpp  main.cc
doc/: CHANGES.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  README-RPi.md  hardware.dia
motd/: README
rcal/: .gitignore  README.md  catalog.json  changelog.txt  checknewsked.sh  eedit.html  findlogs.php  getschedule.php  install.sh  knownscheds.php  localparams.php  log2table.php  logview.html  logview.js  lstyles.css  newsked.php  rcal.html  rcal.js  schedule.json  styles.css  testdata.js  uml.dia  w3.css
rcal/misc-bin/: checknewsked.sh  localparams.sh  testrsked.sh  validatesked.sh
rsked/: baseplayer.cc  baseplayer.hpp  common.hpp  gqrxclient.cc  gqrxclient.hpp  inetcheck.cc  inetcheck.hpp  main.cc  main.hpp  mp3player.cc  mp3player.hpp  mpdclient.cc  mpdclient.hpp  mpdplayer.cc  mpdplayer.hpp  nrsc5player.cc  nrsc5player.hpp  oggplayer.cc  oggplayer.hpp  player.hpp  playermgr.cc  playermgr.hpp  playpref.cc  playpref.hpp  radio.hpp  respath.cc  respath.hpp  rsked.cc  rsked.hpp  schedule.cc  schedule.hpp  sdrplayer.cc  sdrplayer.hpp  silentplayer.hpp  source.cc  source.hpp  vlcplayer.cc  vlcplayer.hpp  vurunner.cc  vurunner.hpp
scripts/: btremote.pl  btremote.service  check_deploy.pl  check_inet.sh  check_playlist.sh  clonelogs.sh  cooling_schema-1.1.json  fixmpdlog.pl  gpiopost.py  logrotate.conf  matwriter.py  mpdlcd.py  rsked.nix  rsked_schema-1.0.json  rsked_schema-1.1.json  rsked_schema-1.2.json  rskrape.pl  rsync_retry.sh  schedule_schema.json  sked_schema-2.0.json  startup_rsked  synclogs.sh  testrsked
test/: fake_rsked.cc  fake_rsked.hpp  gpiotest.cc  iotest.py  mpdtest.cc  sked-ogg.json  sked-test1.json  sked-test2.json  sked-test3.json  sked-test4.json  sked-test5.json  sked-test6.json  sked-test7.json  sked-test8.json  sked-test9.json  tconfig.cc  tconfig.json  tncheck.cc  tncheck2.json  tpmgr.cc  tpmgr.json  tpmgr2.json  tproc.cc  tpty.cc  trespath.cc  tsked.cc  tsrc.cc  ttimeout.cc  tvlc.cc  vlc.json
test/Music/Ash Ra Tempel/Seven Up/: 02.Power Drive.m4a
test/Music/Test/: README.md
test/Music/Test/Flacfiles/: biber_sonata.flac
test/Playlists/: master.m3u
util/: childmgr.cc  childmgr.hpp  chpty.cc  chpty.hpp  cmexceptions.hpp  config.cc  config.hpp  configutil.cc  configutil.hpp  jobutil.cc  jobutil.hpp  logging.cc  logging.hpp  status.h  usbprobe.cc  usbprobe.hpp  version.h.in
vumonitor/: itimer.hpp  vumonitor.cc  vumonitor.hpp
